--- a/templates/products.html
+++ b/templates/products.html
@@ -1,6 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
-{% load custom_filters %}
+{% load custom_filters %}!
+<!-- Подключаем новый файл с нашим тегом -->
 {% load custom_tags %}
 
 {% block title %}
@@ -8,35 +9,36 @@ Products
 {% endblock title %}
 
 {% block content %}
-    <h1>Все товары</h1>
-    <h3>{{ time_now|date:'M d Y l' }}</h3>
-    <h3>{% current_time '%b %d %Y %A' %}</h3>
-    <h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
+   <h1>Все товары</h1>
+   <!-- Вот так выглядело использование переменной и фильтра -->
+   <!-- <h3>{{ time_now|date:'M d Y' }}</h3> -->
+   <!-- А вот так мы используем наш тег-->
+   <h3>{% current_time '%b %d %Y' %}</h3>
+   <h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
 
-    <hr>
-    {% if products %}
-        <table>
-            <tr>
-                <td>Название</td>
-                <td>Описание</td>
-                <td>Категория</td>
-                <td>Цена</td>
-                <td>Количество</td>
-            </tr>
+   <hr>
+   {% if products %}
+       <table>
+           <tr>
+               <td>Название</td>
+               <td>Описание</td>
+               <td>Категория</td>
+               <td>Цена</td>
+               <td>Количество</td>
+           </tr>
 
-            {% for product in products %}
-            <tr>
-                <td>{{ product.name }}</td>
-                <td>{{ product.description|truncatewords:2 }}</td>
-                <td>{{ product.category.name }}</td>
-                <!-- Используем наш фильтр -->
-                <td>{{ product.price|currency:"usd" }}</td>
-                <td>{{ product.quantity }}</td>
-            </tr>
-            {% endfor %}
+           {% for product in products %}
+           <tr>
+               <td>{{ product.name }}</td>
+               <td>{{ product.description|truncatewords:2 }}</td>
+               <td>{{ product.category.name }}</td>
+               <td>{{ product.price|currency:"usd" }}</td>
+               <td>{{ product.quantity }}</td>
+           </tr>
+           {% endfor %}
 
-        </table>
-    {% else %}
-        <h2>Товаров нет!</h2>!
-    {% endif %}
+       </table>
+   {% else %}
+       <h2>Товаров нет!</h2>
+   {% endif %}
 {% endblock content %}
