--- a/templates/products.html
+++ b/templates/products.html
@@ -1,6 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
+{# Импортируем модуль с нашим тегом #}
 {% load custom_tags %}
 
 {% block title %}
@@ -8,35 +9,65 @@ Products
 {% endblock title %}
 
 {% block content %}
-    <h1>Все товары</h1>
-    <h3>{{ time_now|date:'M d Y l' }}</h3>
-    <h3>{% current_time '%b %d %Y %A' %}</h3>
-    <h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
+<h1>Все товары</h1>
 
-    <hr>
-    {% if products %}
-        <table>
-            <tr>
-                <td>Название</td>
-                <td>Описание</td>
-                <td>Категория</td>
-                <td>Цена</td>
-                <td>Количество</td>
-            </tr>
+<form action="" method="get">
+    {{ filterset.form.non_field_errors }}
 
-            {% for product in products %}
-            <tr>
-                <td>{{ product.name }}</td>
-                <td>{{ product.description|truncatewords:2 }}</td>
-                <td>{{ product.category.name }}</td>
-                <!-- Используем наш фильтр -->
-                <td>{{ product.price|currency:"usd" }}</td>
-                <td>{{ product.quantity }}</td>
-            </tr>
-            {% endfor %}
+    {{ filterset.form.name__icontains.errors }}
+    <label for="{{ filterset.form.name__icontains.id_for_label }}">Search</label>
+    <input
+            id="{{ filterset.form.name__icontains.id }}"
+            name="{{ filterset.form.name__icontains.name }}"
+            value="{{ filterset.form.name__icontains.value }}"
+            class="form-control"
+    >
+    <input type="submit" class="mt-3 btn-primary" value="Найти"/>
+</form>
 
-        </table>
-    {% else %}
-        <h2>Товаров нет!</h2>!
-    {% endif %}
+<hr>
+{% if products %}
+<table>
+    <tr>
+        <td>Название</td>
+        <td>Описание</td>
+        <td>Категория</td>
+        <td>Цена</td>
+        <td>Количество</td>
+    </tr>
+
+    {% for product in products %}
+    <tr>
+        <td>{{ product.name }}</td>
+        <td>{{ product.description|truncatechars:15 }}</td>
+        <td>{{ product.category.name }}</td>
+        <td>{{ product.price|currency }}</td>
+        <td>{{ product.quantity }}</td>
+    </tr>
+    {% endfor %}
+
+</table>
+{% else %}
+<h2>Товаров нет!</h2>
+{% endif %}
+
+{% if page_obj.has_previous %}
+{# Для каждой ссылки пагинации указываем обработку через новый тег #}
+<a href="?{% url_replace page=1 %}">1</a>
+{% if page_obj.previous_page_number != 1 %}
+...
+<a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+{% endif %}
+{% endif %}
+
+{{ page_obj.number }}
+
+{% if page_obj.has_next %}
+<a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+{% if paginator.num_pages != page_obj.next_page_number %}
+...
+<a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+{% endif %}
+{% endif %}
+
 {% endblock content %}
