--- a/templates/products.html
+++ b/templates/products.html
@@ -11,18 +11,23 @@ Products
 {% block content %}
 <h1>Все товары</h1>
 
-<form action="" method="get">
-    {{ filterset.form.non_field_errors }}
+<!--<form action="" method="get">-->
+<!--    {{ filterset.form.non_field_errors }}-->
 
-    {{ filterset.form.name__icontains.errors }}
-    <label for="{{ filterset.form.name__icontains.id_for_label }}">Search</label>
-    <input
-            id="{{ filterset.form.name__icontains.id }}"
-            name="{{ filterset.form.name__icontains.name }}"
-            value="{{ filterset.form.name__icontains.value }}"
-            class="form-control"
-    >
-    <input type="submit" class="mt-3 btn-primary" value="Найти"/>
+<!--    {{ filterset.form.name__icontains.errors }}-->
+<!--    <label for="{{ filterset.form.name__icontains.id_for_label }}">Search</label>-->
+<!--    <input-->
+<!--            id="{{ filterset.form.name__icontains.id }}"-->
+<!--            name="{{ filterset.form.name__icontains.name }}"-->
+<!--            value="{{ filterset.form.name__icontains.value }}"-->
+<!--            class="form-control"-->
+<!--    >-->
+<!--    <input type="submit" class="mt-3 btn-primary" value="Найти"/>-->
+<!--</form>-->
+
+<form action="" method="get">
+    {{ filterset.form.as_p }}
+    <input type="submit" value="Найти"/>
 </form>
 
 <hr>
