--- a/templates/products.html
+++ b/templates/products.html
@@ -1,7 +1,6 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
-{# Импортируем модуль с нашим тегом #}
 {% load custom_tags %}
 
 {% block title %}
@@ -9,36 +8,29 @@ Products
 {% endblock title %}
 
 {% block content %}
-<h1>Все товары</h1>
-
-<!--<form action="" method="get">-->
-<!--    {{ filterset.form.non_field_errors }}-->
-
-<!--    {{ filterset.form.name__icontains.errors }}-->
-<!--    <label for="{{ filterset.form.name__icontains.id_for_label }}">Search</label>-->
-<!--    <input-->
-<!--            id="{{ filterset.form.name__icontains.id }}"-->
-<!--            name="{{ filterset.form.name__icontains.name }}"-->
-<!--            value="{{ filterset.form.name__icontains.value }}"-->
-<!--            class="form-control"-->
-<!--    >-->
-<!--    <input type="submit" class="mt-3 btn-primary" value="Найти"/>-->
-<!--</form>-->
+<h1>Поиск товаров</h1>
 
 <form action="" method="get">
     {{ filterset.form.as_p }}
     <input type="submit" value="Найти"/>
 </form>
+    <hr>
+{% if perms.product_create %}
+<a href="{% url 'product_create' %}"><h3>Добавить товар</h3></a>
+{% endif %}
 
-<hr>
 {% if products %}
-<table>
-    <tr>
-        <td>Название</td>
-        <td>Описание</td>
-        <td>Категория</td>
-        <td>Цена</td>
-        <td>Количество</td>
+<table cellpadding="14">
+    <tr class=title>
+        <th><b> &nbsp Название</b></th>
+        <th><b> &nbsp Описание</b></th>
+        <th><b> &nbsp Категория</b></th>
+        <th><b> &nbsp Цена</b></th>
+        <th><b> &nbsp Количество</b></th>
+        {% if perms.simpleapp.change_product or perms.simpleapp.delete_product %}
+        <th><b> &nbsp Действия &nbsp </b></th>
+        <th><b> &nbsp Действия &nbsp </b></th>
+        {% endif %}
     </tr>
 
     {% for product in products %}
@@ -48,6 +40,13 @@ Products
         <td>{{ product.category.name }}</td>
         <td>{{ product.price|currency }}</td>
         <td>{{ product.quantity }}</td>
+        {% if perms.simpleapp.delete_product %}
+        <td><a href="{% url 'product_delete' product.id %}">Удалить</a></td>
+        {% endif %}
+        &nbsp;
+        {% if perms.simpleapp.change_product %}
+        <td><a href="{% url 'product_update' product.id %}">Редактировать</a></td>
+        {% endif %}
     </tr>
     {% endfor %}
 
