--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <div class="container">
-                <a class="navbar-brand" href="#">МАГАЗИН</a>
+                <a class="navbar-brand" href="/products/">МАГАЗИН</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive"
                         aria-controls="navbarResponsive" aria-expanded="false"
@@ -27,7 +27,7 @@
 <!--                            </a>-->
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/products/">Все товары</a>
+                            <a class="nav-link" href="/accounts/login/">Выйти</a>
 <!--                        </li>-->
 <!--                        <li class="nav-item">-->
 <!--                            <a class="nav-link" href="/product/">Contact</a>-->
