--- a/templates/products.html
+++ b/templates/products.html
@@ -15,7 +15,7 @@ Products
     <input type="submit" value="Найти"/>
 </form>
     <hr>
-{% if perms.product_create %}
+{% if perms.simpleapp.add_product %}
 <a href="{% url 'product_create' %}"><h3>Добавить товар</h3></a>
 {% endif %}
 
@@ -36,7 +36,7 @@ Products
     {% for product in products %}
     <tr>
         <td>{{ product.name }}</td>
-        <td>{{ product.description|truncatechars:30 }}</td>
+        <td>{{ product.description|truncatechars:15 }}</td>
         <td>{{ product.category.name }}</td>
         <td>{{ product.price|currency }}</td>
         <td>{{ product.quantity }}</td>
